--- a/src/view/Layouts/layout.ejs
+++ b/src/view/Layouts/layout.ejs
@@ -6,7 +6,7 @@
   <title>Preseleccion-Verano</title>
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 </head>
 
 <body class="bg-light d-flex flex-column min-vh-100">
@@ -22,6 +22,6 @@
   <%- include("../Parcials/Footer.ejs") %>
 
   <!-- Bootstrap JS Bundle -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+ <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
