--- a/src/view/MainView.ejs
+++ b/src/view/MainView.ejs
@@ -1,4 +1,9 @@
 <!-- Contenedor principal con margen superior -->
+ <div class="container mt-5">    <h4 class="mb-3">Asegurese de revisar el arbol de prelaciones antes de realizar el proceso, esto es un sondeo general por lo cual si ingresa una materia la cual es prelada por otra, no podra inscribirla cuando se abra el proceso autentico.</h4>
+<a href="/files/pemsun.pdf"  download  target="_blank" class="btn btn-primary">
+  <i class="bi bi-file-earmark-pdf"></i> Ver PDF
+</a>
+</div>
 <div class="container mt-5">
 
   <div class="row">
@@ -120,7 +125,6 @@
       </table>
 
     </div>
-
-  </div>
-
+<div class="text-center mt-4">
+</div>
 </div>
